<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_size_48"
        android:background="@color/colorToolbar">

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="@dimen/dimen_size_48"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dimen_size_5"
            android:background="@drawable/xml_button_toolbar_pressed"
            android:padding="@dimen/dimen_size_5"
            android:src="@drawable/ic_arrow_back_black"/>

        <com.example.administrator.chotot.view.CustomFontTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/forgot"
            android:textColor="@color/colorTextBlack"
            android:textSize="@dimen/dimen_text_20sp"
            app:typeface="roboto_regular"/>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/dimen_size_15">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_size_10"
            android:src="@drawable/img_phone"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_size_10"
            android:gravity="center"
            android:orientation="horizontal">

            <com.example.administrator.chotot.view.CustomFontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Nhập số điện thoại"
                android:textColor="@color/colorTextBlack"
                android:textSize="@dimen/dimen_text_16sp"
                app:typeface="roboto_bold"/>

            <com.example.administrator.chotot.view.CustomFontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" để lấy mật khẩu"
                android:textColor="@color/colorTextBlack"
                android:textSize="@dimen/dimen_text_16sp"
                app:typeface="roboto_light"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBgInputLogin"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/dimen_size_10">

            <com.example.administrator.chotot.view.CustomFontEditText
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/phone_number"
                android:inputType="number"
                android:padding="@dimen/dimen_size_10"
                app:typeface="roboto_light"/>
        </LinearLayout>

        <com.example.administrator.chotot.view.CustomFontTextView
            android:id="@+id/tv_accept"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_size_15"
            android:background="@drawable/xml_background_button_login"
            android:gravity="center"
            android:padding="@dimen/dimen_size_15"
            android:text="@string/accept"
            android:textAllCaps="true"
            android:textColor="@color/colorTextWhite"
            android:textSize="@dimen/dimen_text_16sp"
            app:typeface="roboto_bold"/>
    </LinearLayout>
</LinearLayout>